--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
+  height: 100vh;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+header {
+  height: 15%;
+}
+
+main {
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
