--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,10 @@ header {
 }
 
 header > h1 {
-  margin: 0;
+  margin: 0 auto 0 10%;
   color: white;
   text-align: center;
   width: min-content;
-}
-
-header > div {
-  width: 40%;
-  height: 80%;
-  padding: 1%;
-  background: white;
 }
 
 main {
